# proyecto_ros

./: .gitignore  README.md
Web Sprint 3/Version definitiva/: index.html
Web Sprint 3/Version definitiva (Inestable)/: basic.html  basicold.html  charts.html  login.html  tables.html
Web Sprint 3/Version definitiva (Inestable)/css/: log.css  stylestest.css  video.css
Web Sprint 3/Version definitiva (Inestable)/js/: camarapruebas.js
Web Sprint 3/Version definitiva/css/: stylestest.css
Web Sprint 3/Version definitiva/js/: camara.js  camarapruebas.js  fireBase.js  login.js  main.js
Web Sprint 3/my_first_rosweb/: index.html
Web Sprint 3/my_first_rosweb/css/: indexStyle.css  main.css
Web Sprint 3/my_first_rosweb/js/: main.js
driver-i2c-between(despreciado)/slave-opencr-i2c/: slave-opencr-i2c.ino
driver-i2c-between/master-esp32-i2c/: master-esp32-i2c.ino
driver-i2c-between/master-open-cv/: master-open-cv.ino
driver-i2c-between/slave-esp32/Solucion_parte_III/: createCollection.py  detectar_texto.py  labels.py  searchFace.py
driver-i2c-between/slave-opencr-i2c/: slave-opencr-i2c.ino
driver-serial-ir-cam/esp32/: esp32.ino
driver-serial-ir-cam/opencr/: opencr.ino  turtlebot3_burger.h  turtlebot3_core.ino  turtlebot3_core_config.h
driver-spi-external-ir-cam(despreciado)/ir-cam-v2/mlx90640/: MLX90640_I2C_Driver.cpp
driver-spi-external-ir-cam(despreciado)/ir-cam/IRCameraWiFiServer/: env.h
driver-spi-external-ir-cam(despreciado)/spi-slave-opencr/: spi-slave-opencr.ino
driver-spi-external-ir-cam/ir-cam-v2/mlx90640/: mlx90640.ino
driver-spi-external-ir-cam/ir-cam/IRCameraWiFiServer/: IRCameraWiFiServer.ino
driver-spi-external-ir-cam/simple-test-example/Turtlebot3_core/: turtlebot3_core.ino
image_capture_2/: CMakeLists.txt  README.txt  package.xml
image_capture_2/launch/: gazebo_launch.launch
image_capture_2/src/: capturar.py  searchFace.py
ir-cam-v2/mlx90640/MLXHeatCam/: MLXHeatCam.pde
ir-cam/IRCameraWiFiServer/: IRCameraWiFiServer.ino
maps/: tb3_nave2_map.pgm  tb3_nave2_map.yaml
my_first_rosweb/: basic.html  index.html  login.html
my_first_rosweb/css/: indexStyle.css  main.css
my_navigation_stack/: CMakeLists.txt  package.xml
my_navigation_stack/launch/: my_navigation_stack.launch  my_navigation_stack_r.launch
my_navigation_stack/maps/: tb3_nave2_map.yaml  tb3_nave3_map.pgm  tb3_nave3_map.yaml  tb3_nave_map.pgm  tb3_nave_map.yaml
my_navigation_stack/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml
my_navigation_stack/rviz/: my_config.rviz
provide_map/: package.xml
provide_map/launch/: provide_map.launch
ros-arduino-v1/driver-serial-ir-cam/1-esp32/: 1-esp32.ino  esp32.ino
ros-arduino-v1/driver-serial-ir-cam/2-opencr-esp32-clon/: 2-opencr-esp32-clon.ino
ros-arduino-v1/driver-serial-ir-cam/3-opencr/: 3-opencr.ino  turtlebot3_core_config.h
ros-arduino-v1/driver-serial-ir-cam/esp32/: esp32.ino
ros-arduino-v1/driver-serial-ir-cam/opencr-p/: opencr-p.ino
ros-arduino-v1/driver-serial-ir-cam/opencrS/: opencrS.ino
ros-arduino-v1/driver-spi-external-ir-cam(despreciado)/ir-cam-v5/opencr-slave-spi/: opencr-slave-spi.ino
ros-arduino-v1/driver-spi-external-ir-cam(despreciado)/simple-test-example/Turtlebot3_core/: turtlebot3_core_config.h
ros-arduino-v1/driver-spi-external-ir-cam(despreciado)/simple-test-example/example-digital-output/: example-digital-output.ino
ros-arduino/driver-serial-ir-cam/esp32/: esp32.ino
ros-arduino/driver-serial-ir-cam/opencr/: opencr.ino  turtlebot3_core_config.h
ros-arduino/driver-serial-ir-cam/opencr-p/: opencr-p.ino
ros-arduino/driver-spi-external-ir-cam(despreciado)/ir-cam-v3/Example2_OutputToProcessing/: Example2_OutputToProcessing.ino
ros-arduino/driver-spi-external-ir-cam(despreciado)/ir-cam/IRCameraWiFiServer/: webpage.h
ros-arduino/driver-spi-external-ir-cam(despreciado)/simple-test-example/example-hc-sr04/: example-hc-sr04.ino
route_navigation/: CMakeLists.txt  package.xml
route_navigation/launch/: route_navigation.launch  route_navigation_r.launch
route_navigation/src/: route_navigation.py  route_navigation_r.py
route_navigation_service_msg/: CMakeLists.txt  package.xml
simple_navigation/: CMakeLists.txt  package.xml
simple_navigation/launch/: simple_navigation.launch  simple_navigation_r.launch
simple_navigation/src/: simple_navigation.py  simple_navigation_r.py
simple_navigation_service_msg/: CMakeLists.txt  package.xml
simple_navigation_service_msg/srv/: SimpleNavigationServiceMessage.srv
turtlebot3_gazebo/launch/: turtlebot3_nave.launch
turtlebot3_gazebo/worlds/: turtlebot3_nave.world
(+9 files in other folders)
