<?xml version="1.0"?>
<package format="2">
  <name>route_navigation</name>
  <version>0.0.0</version>
  <description>The route_navigation package</description>

  <maintainer email="almibar1@todo.todo">almibar1</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>route_navigation_service_msg</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>simple_navigation_service_msg</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>simple_navigation_service_msg</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
